fix(native-agent): settle lifecycle calls on any throwable
A checked exception thrown through Effect (Kotlin callers, generic
rethrows) bypassed failure accounting and left the call EXECUTING, so
finishRun and close could never settle the owner. Catch Throwable,
record FAILED_AFTER_START and rethrow the same object.

Document the Effect contract and driver-owned stop signal, split the
execute matrix row for closed owners, and make RunLifecycleTest run the
AC-001/003/007/008/009/011 scenarios as specified, plus reentrant calls
from inside an effect.